EAM - feat: add CSS grid capabilites to make existing design responsive; added to login and create account pages

--- a/personal-trainer/app/globals.css
+++ b/personal-trainer/app/globals.css
@@ -19,6 +19,14 @@
   }
 }
 
+/* for login, create account */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
   background: var(--foreground);
   color: var(--background);
