--- a/personal-trainer/components/Dashboard.module.css
+++ b/personal-trainer/components/Dashboard.module.css
@@ -33,7 +33,7 @@
 .contentGrid {
   grid-row: 2;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 3fr;
   gap: 1rem;
   padding: 1rem 2rem;
   background-color: #5b9bd5;
